--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.12",
+    "axios": "^0.21.1",
     "firebase": "^8.3.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
